--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
   <option value="2">ciseaux</option>
 </select>
 <button id="button" type="button">Shifumi !</button>
+
+
+<!-- <form>
+  <p>A vous de jouer !!! :</p>
+  <div>
+    <input type="radio" name="pierre" value="0" id="pierre">
+    <label for="pierre">Pierre</label>
+
+    <input type="radio" name="feuille" value="1" id="feuille">
+    <label for="feuille">feuille</label>
+
+    <input type="radio" name="ciseaux" value="2" id="ciseaux">
+    <label for="ciseaux">ciseaux</label>
+  </div>
+  <div>
+    <button id="button" type="submit">Shifumi ! </button>
+  </div>
+</form> -->
+
+
+
     <script src="assets/js/jquery-3.3.1.min.js"></script>
     <script src="assets/js/jquery.js"></script>
   </body>
