--- a/index.html
+++ b/index.html
@@ -1,40 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
 
-    <title>Exercice 1</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-  </head>
-  <body>
-<select class="list" name="">
-  <option value="0">pierre</option>
-  <option value="1">feuille</option>
-  <option value="2">ciseaux</option>
-</select>
-<button id="button" type="button">Shifumi !</button>
+<head>
+  <meta charset="utf-8" />
+  <title>Shi Fu MI</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
 
-
-<!-- <form>
-  <p>A vous de jouer !!! :</p>
-  <div>
-    <input type="radio" name="pierre" value="0" id="pierre">
-    <label for="pierre">Pierre</label>
-
-    <input type="radio" name="feuille" value="1" id="feuille">
-    <label for="feuille">feuille</label>
-
-    <input type="radio" name="ciseaux" value="2" id="ciseaux">
-    <label for="ciseaux">ciseaux</label>
-  </div>
-  <div>
-    <button id="button" type="submit">Shifumi ! </button>
-  </div>
-</form> -->
-
-
-
-    <script src="assets/js/jquery-3.3.1.min.js"></script>
-    <script src="assets/js/jquery.js"></script>
-  </body>
+ <body>
+   <select id="userChoice">
+     <option value="2">Pierre</option>
+     <option value="0">Feuille</option>
+     <option value="1">Ciseaux</option>
+   </select>
+   <button type="button" name="button" id="shiFuMi">Shifumi</button>
+   <div id="result"></div>
+  <script src="assets/js/jquery-3.3.1.min.js"></script>
+  <script src="assets/js/jquery.js"></script>
+</body>
 </html>
